syntax = "proto3";

package proto;

//Sets the Go package where structs generated from this .proto will be
//placed. If omitted, the Go package will be derived from the following:
option go_package = "client/gen/proto";

//unary
message User {
  string name = 1;
  string email = 2;
  string password = 3;
  repeated string roles = 4;
}

message Post {
  string title = 1;
  string author = 2;
  string body = 3;
}

//client streaming
message CreatePostRequest {
  repeated Post posts = 1;
}

message CreatePostResponse {
  string result = 1;
}



message SignupRequest {
  User user = 1;
}

message SignupResponse {
  string result = 1;
}

service UserService {
  //unary
  rpc Signup(SignupRequest) returns (SignupResponse);

  //client streaming
  rpc CreatePost(stream CreatePostRequest) returns (CreatePostResponse);
}
